force-app/main/default/objects/Business_Rule__c/Business_Rule__c.object-meta.xml
<CustomObject>
    <label>Business Rule</label>
    <nameField>
        <displayFormat>BR-{0000000}</displayFormat>
        <label>Business Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>