force-app/main/default/objects/Business_Rule__c/fields/Account_Group_Location_Project_Asset__c.field-meta.xml
<CustomField>
    <fullName>Account_Group_Location_Project_Asset__c</fullName>
    <description>This field is a combination of 5 lookup fields of Business rule - Account; Group; Location;Project; Asset. The field is created for backend tracking purpose to identify the duplicate business rule. Hence, the field will not be visible in any of the page layout or to the UI of Business rule.</description>
    <label>Account_Group_Location_Project_Asset</label>
    <type>TextArea</type>
</CustomField>