force-app/main/default/objects/Business_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gives the status of the Business Rule</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>