force-app/main/default/objects/Business_Rule__c/fields/Active_Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Active_Inactive_Reason__c</fullName>
    <label>Active/Inactive Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>