force-app/main/default/objects/Business_Rule__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>User Friendly Business Rule to search and understand the intent of Business Rule</description>
    <label>Alias</label>
    <length>50</length>
    <type>Text</type>
</CustomField>