force-app/main/default/objects/Business_Rule__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Location__c</field>
            <operation>equals</operation>
            <valueField>$Source.LocationId__c</valueField>
        </filterItems>
        <filterItems>
            <field>Asset.RecordType.Name</field>
            <operation>equals</operation>
            <value>Service Header</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Business Rules</relationshipLabel>
    <relationshipName>Business_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>