force-app/main/default/objects/Business_Rule__c/fields/Business_rule_name__c.field-meta.xml
<CustomField>
    <fullName>Business_rule_name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,    Name  , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business rule name</label>
    <type>Text</type>
</CustomField>