force-app/main/default/objects/Business_Rule__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Division/Department</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Location Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>