force-app/main/default/objects/Business_Rule__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WM Portal</fullName>
            </value>
            <value>
                <fullName>Service Channel</fullName>
            </value>
            <value>
                <fullName>Old Seville</fullName>
            </value>
            <value>
                <fullName>RealSuite</fullName>
            </value>
            <value>
                <fullName>VX Maintain/ Verisae</fullName>
            </value>
            <value>
                <fullName>OfficeTrax</fullName>
            </value>
            <value>
                <fullName>Maximo</fullName>
            </value>
            <value>
                <fullName>FixIt</fullName>
            </value>
            <value>
                <fullName>Big Sky</fullName>
            </value>
            <value>
                <fullName>Corrigo</fullName>
            </value>
            <value>
                <fullName>BaseCamp</fullName>
            </value>
            <value>
                <fullName>fmPilot</fullName>
            </value>
            <value>
                <fullName>NEST Facilitate</fullName>
            </value>
            <value>
                <fullName>Staples IQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>