force-app/main/default/objects/Business_Rule__c/fields/Channel_Req__c.field-meta.xml
<CustomField>
    <fullName>Channel_Req__c</fullName>
    <label>Channel Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>