force-app/main/default/objects/Business_Rule__c/fields/Channel_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Channel_Requirements__c</fullName>
    <label>Channel Requirements DO NOT USE</label>
    <type>TextArea</type>
</CustomField>