force-app/main/default/objects/Business_Rule__c/fields/Company_Category__c.field-meta.xml
<CustomField>
    <fullName>Company_Category__c</fullName>
    <label>Company Category</label>
    <length>255</length>
//Added by Srishti as per BRE-308 
//Added by Srishti as per BRE-308
    <type>Text</type>
</CustomField>