force-app/main/default/objects/Business_Rule__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <description>Container of the Business Rule</description>
    <label>Container</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type</valueSetName>
    </valueSet>
</CustomField>