force-app/main/default/objects/Business_Rule__c/fields/Days_Until_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Deactivated__c</fullName>
    <formula>IF(ISBLANK(End_Date__c), 365, End_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Deactivated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>