force-app/main/default/objects/Business_Rule__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>This field indicated effective Start  Date of Business Rule</description>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>