force-app/main/default/objects/Business_Rule__c/fields/EffectiveDate_RecordType_Active__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate_RecordType_Active__c</fullName>
    <description>This field is a combination of different data type of Business rule - Effective Data, Record Type, Active The field is created for backend tracking purpose to identify the duplicate business rule. Hence, the field will not be visible in any of the page layout or to the UI of Business rule.

Update 20/02/25 - Only contain Record type name</description>
    <label>EffectiveDate_RecordType_Active</label>
    <type>TextArea</type>
</CustomField>