force-app/main/default/objects/Business_Rule__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This field indicates Effective End Date of the Business Rule.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>