force-app/main/default/objects/Business_Rule__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Category_Type__c</field>
            <operation>equals</operation>
            <valueField>Categorization__c.Category__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.AccountId__c</field>
            <operation>equals</operation>
            <valueField>Categorization__c.Client_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Categorization__c</referenceTo>
    <relationshipLabel>Business Rules</relationshipLabel>
    <relationshipName>Business_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>