force-app/main/default/objects/Business_Rule__c/fields/Is_Auto_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Email</label>
    <type>Checkbox</type>
</CustomField>