force-app/main/default/objects/Business_Rule__c/fields/Is_Channel_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Is_Channel_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Channel Requirements</label>
    <type>Checkbox</type>
</CustomField>