force-app/main/default/objects/Business_Rule__c/fields/Is_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Instructions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Instructions</label>
    <type>Checkbox</type>
</CustomField>