force-app/main/default/objects/Business_Rule__c/fields/LocationId__c.field-meta.xml
<CustomField>
    <fullName>LocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location Account which is associated with the Business Rule</description>
    <label>Location Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Location</value>
        </filterItems>
        <filterItems>
            <field>$Source.AccountId__c</field>
            <operation>equals</operation>
            <valueField>Account.Parent.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Rules (Location Name)</relationshipLabel>
    <relationshipName>Business_Rules_Location</relationshipName>
    <type>Lookup</type>
</CustomField>