force-app/main/default/objects/Business_Rule__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Trash</fullName>
            </value>
            <value>
                <fullName>Cardboard</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Co-Mingle</fullName>
            </value>
            <value>
                <fullName>ABS Parts</fullName>
            </value>
            <value>
                <fullName>ABS Sheets</fullName>
            </value>
            <value>
                <fullName>Agricultural Waste</fullName>
            </value>
            <value>
                <fullName>Aluminum</fullName>
            </value>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>Architectural Glass</fullName>
            </value>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Ash - Bottom Ash</fullName>
            </value>
            <value>
                <fullName>Ash - Fly Ash</fullName>
            </value>
            <value>
                <fullName>Asphalt</fullName>
            </value>
            <value>
                <fullName>Bag in Box</fullName>
            </value>
            <value>
                <fullName>Bags for Mixed Recyclables</fullName>
            </value>
            <value>
                <fullName>Bags for Shredded Cans</fullName>
            </value>
            <value>
                <fullName>Bags for Shredded Plastic</fullName>
            </value>
            <value>
                <fullName>Bale Wire</fullName>
            </value>
            <value>
                <fullName>Ballast</fullName>
            </value>
            <value>
                <fullName>Batteries</fullName>
            </value>
            <value>
                <fullName>Biodegradable Food Utensils</fullName>
            </value>
            <value>
                <fullName>Bottles/Cans</fullName>
            </value>
            <value>
                <fullName>Boxboard Cuttings</fullName>
            </value>
            <value>
                <fullName>Brick</fullName>
            </value>
            <value>
                <fullName>Bulk Material</fullName>
            </value>
            <value>
                <fullName>Cans</fullName>
            </value>
            <value>
                <fullName>Cans and Plastic Bottles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>