force-app/main/default/objects/Business_Rule__c/fields/Multiple_Mandatory_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Mandatory_Approvers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To describe whether Multiple Approvers needed or not</description>
    <label>Multiple Mandatory Approvers</label>
    <type>Checkbox</type>
</CustomField>