force-app/main/default/objects/Business_Rule__c/fields/No_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to exclude approvals</description>
    <inlineHelpText>If this Checkbox is checked then you will not be able to add Service Approvers.</inlineHelpText>
    <label>No Approval Required</label>
    <type>Checkbox</type>
</CustomField>