force-app/main/default/objects/Business_Rule__c/fields/NTE_Rules__c.field-meta.xml
<CustomField>
    <fullName>NTE_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTE Rules</label>
    <type>Checkbox</type>
</CustomField>