force-app/main/default/objects/Business_Rule__c/fields/Occurrence_Limit__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Determines limit the number of services which can be requested without an approval triggering.</description>
    <label>Number of Occurrence Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>