force-app/main/default/objects/Business_Rule__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>Hold the process names fetched from the global picklist</description>
    <label>Process</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Process</valueSetName>
    </valueSet>
</CustomField>