force-app/main/default/objects/Business_Rule__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Project Code of the Asset</description>
    <label>Project</label>
    <length>155</length>
    <type>Text</type>
</CustomField>