force-app/main/default/objects/Business_Rule__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Code__c.Client_Account__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <filterItems>
            <field>Project_Code__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Project Code Detail</value>
        </filterItems>
        <filterItems>
            <field>$Source.AccountId__c</field>
            <operation>equals</operation>
            <valueField>Project_Code__c.Client_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Code__c</referenceTo>
    <relationshipLabel>Business Rules</relationshipLabel>
    <relationshipName>Business_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>