force-app/main/default/objects/Business_Rule__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Hold case Type</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Type</valueSetName>
    </valueSet>
</CustomField>