force-app/main/default/objects/Business_Rule__c/fields/Required_Information__c.field-meta.xml
<CustomField>
    <fullName>Required_Information__c</fullName>
    <description>Contains Required Information for the Case Creation</description>
    <label>Required Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO Number</fullName>
            </value>
            <value>
                <fullName>PSI</fullName>
            </value>
            <value>
                <fullName>Company Category</fullName>
            </value>
            <value>
                <fullName>Certificate of Destruction</fullName>
                <isActive>false</isActive>
                <label>Certificate of Destruction</label>
            </value>
            <value>
                <fullName>General Ledger Code</fullName>
                <isActive>false</isActive>
                <label>General Ledger Code</label>
            </value>
            <value>
                <fullName>Profile Number</fullName>
                <isActive>false</isActive>
                <label>Profile Number</label>
            </value>
            <value>
                <fullName>Quote</fullName>
                <isActive>false</isActive>
                <label>Quote</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>