force-app/main/default/objects/Business_Rule__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Account</fullName>
            </value>
            <value>
                <fullName>Vendor Account Role</fullName>
            </value>
            <value>
                <fullName>Program Manager Director</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Program Manager Specialist</fullName>
            </value>
            <value>
                <fullName>Strategic Account Manager</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>Sales Program Manager</fullName>
            </value>
            <value>
                <fullName>Manager Strategic Accounts</fullName>
            </value>
            <value>
                <fullName>Receivable Account Manager (RAM)</fullName>
            </value>
            <value>
                <fullName>Billing Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>