force-app/main/default/objects/Business_Rule__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <description>Contains Schedule Type of the Business Rule</description>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>