force-app/main/default/objects/Business_Rule__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>Populates Case SubType</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Sub_Type</valueSetName>
    </valueSet>
</CustomField>