force-app/main/default/objects/Business_Rule__c/fields/Special_Ins__c.field-meta.xml
<CustomField>
    <fullName>Special_Ins__c</fullName>
    <label>Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>