force-app/main/default/objects/Business_Rule__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <label>Special Instructions DO NOT USE</label>
    <type>TextArea</type>
</CustomField>