force-app/main/default/objects/Business_Rule__c/fields/Special_Instructions_Approval__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_Approval__c</fullName>
    <description>To store the Special Instruction values</description>
    <label>Approval Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>