force-app/main/default/objects/Business_Rule__c/fields/Universal_Rule__c.field-meta.xml
<CustomField>
    <fullName>Universal_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox designates if the BR rule is for the Universal Account Team rule.</description>
    <label>Universal Rule</label>
    <type>Checkbox</type>
</CustomField>