force-app/main/default/objects/Business_Rule__c/recordTypes/Approval.recordType-meta.xml
<RecordType>
    <fullName>Approval</fullName>
    <active>true</active>
    <description>Business Rule for Approval</description>
    <label>Approval</label>
</RecordType>