force-app/main/default/objects/Business_Rule__c/recordTypes/Business_Notification.recordType-meta.xml
<RecordType>
    <fullName>Business_Notification</fullName>
    <active>true</active>
    <label>Business Notification</label>
</RecordType>