force-app/main/default/objects/Business_Rule__c/recordTypes/Quote_New_Service.recordType-meta.xml
<RecordType>
    <fullName>Quote_New_Service</fullName>
    <active>false</active>
    <description>This record type will be used for approvals based on Quote information</description>
    <label>Quote New Service</label>
</RecordType>