force-app/main/default/objects/Business_Rule__c/recordTypes/Required_Information.recordType-meta.xml
<RecordType>
    <fullName>Required_Information</fullName>
    <active>true</active>
    <description>Business Rule for Required Information</description>
    <label>Required Information</label>
</RecordType>