force-app/main/default/objects/Business_Rule__c/recordTypes/Task_Notification.recordType-meta.xml
<RecordType>
    <fullName>Task_Notification</fullName>
    <active>true</active>
    <description>Business Rule for Notification</description>
    <label>Task Notification</label>
</RecordType>