force-app/main/default/objects/Business_Rule__c/validationRules/Asset_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Error</fullName>
    <active>false</active>
    <description>Container, Asset ,Project and Material,Location,Category are mutually exclusive. Business Rule should have only one of the values from these combinations.</description>
    <errorConditionFormula>OR(IF(NOT(ISBLANK(AssetId__c)),
IF(OR(NOT(ISBLANK(TEXT(Container__c))), NOT(ISBLANK(Project_Code__c)),NOT(ISBLANK(TEXT(Schedule_Type__c)))),True,False ),False),
IF(NOT(ISBLANK(Project_Code__c)), IF(OR(NOT(ISBLANK(TEXT(Container__c))), NOT(ISBLANK(AssetId__c)),NOT(ISBLANK(TEXT(Schedule_Type__c)))),True,False),False),
IF(NOT(ISBLANK(TEXT(Material__c))),IF(OR(NOT(ISBLANK(LocationId__c)),NOT(ISBLANK(AssetId__c)),NOT(ISBLANK(TEXT(Category_Type__c))),NOT(ISBLANK(Project_Code__c))),True,False ),False))</errorConditionFormula>
    <errorMessage>Container,Asset,Project and Material,Location,Category are mutually exclusive. You may enter only one of the three for these combinations in the Business Rule.</errorMessage>
</ValidationRule>