force-app/main/default/objects/Business_Rule__c/validationRules/CannotActivate_EndDatePast.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotActivate_EndDatePast</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Active__c), Active__c=true, End_Date__c &lt;= TODAY())</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>You cannot activate a Business Rule with the End Date in the past.</errorMessage>
</ValidationRule>