force-app/main/default/objects/Business_Rule__c/validationRules/ChannelNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ChannelNameRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK(Text(Channel__c)) , NOT(ISBLANK(  Channel_Req__c )))</errorConditionFormula>
    <errorDisplayField>Channel__c</errorDisplayField>
    <errorMessage>Please select Channel</errorMessage>
</ValidationRule>