force-app/main/default/objects/Business_Rule__c/validationRules/Location_Combination_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Combination_Not_Allowed</fullName>
    <active>true</active>
    <description>Location with Category Type/Group field cannot be combined together.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(  LocationId__c  )), 
    OR(
        NOT(ISPICKVAL( Category_Type__c , &quot;&quot;)),   
        NOT(ISBLANK( Group__c))
       
    )
)</errorConditionFormula>
    <errorDisplayField>LocationId__c</errorDisplayField>
    <errorMessage>Location with Category Type/Group field cannot be combined together.</errorMessage>
</ValidationRule>