force-app/main/default/objects/Business_Rule__c/validationRules/Location_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( ISBLANK( AssetId__c )) ,
    ISBLANK( LocationId__c )
)</errorConditionFormula>
    <errorDisplayField>LocationId__c</errorDisplayField>
    <errorMessage>Please select a Location when an Asset is selected.</errorMessage>
</ValidationRule>