force-app/main/default/objects/Business_Rule__c/validationRules/No_Task_Notification_On_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Task_Notification_On_Location</fullName>
    <active>true</active>
    <description>Task Notification record should not be created from Location.</description>
    <errorConditionFormula>AND(RecordType.Name == &quot;Task Notification&quot;, NOT(ISBLANK( LocationId__c )) )</errorConditionFormula>
    <errorDisplayField>AccountId__c</errorDisplayField>
    <errorMessage>Please use Client Account to create Task Notification Rule.</errorMessage>
</ValidationRule>