force-app/main/default/objects/Business_Rule__c/validationRules/Read_Only_Business_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Read_Only_Business_Rule</fullName>
    <active>true</active>
    <description>When Business Rule is active Account and Account Location can be modified.</description>
    <errorConditionFormula>IF( Active__c ,ISCHANGED(AccountId__c) || ISCHANGED(LocationId__c),false)</errorConditionFormula>
    <errorDisplayField>Active__c</errorDisplayField>
    <errorMessage>Active Business Rule cannot be modified.</errorMessage>
</ValidationRule>