force-app/main/default/objects/Business_Rule__c/validationRules/SingleEntry_Instructions_ChannelRequ.validationRule-meta.xml
<ValidationRule>
    <fullName>SingleEntry_Instructions_ChannelRequ</fullName>
    <active>true</active>
    <description>Only allow</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Special_Ins__c)), NOT(ISPICKVAL(Channel__c, &apos;&apos; ) ))</errorConditionFormula>
    <errorDisplayField>Special_Ins__c</errorDisplayField>
    <errorMessage>You can only enter in Special Instructions or Channel Requirements/Channel Name</errorMessage>
</ValidationRule>